--- a/code/style.css
+++ b/code/style.css
@@ -95,11 +95,11 @@ img[alt = screenshot]{height: 20px}
 #TOC::before {
   content: "";
   display: block;
-  height: 80px;
+  height: 200px;
   margin: 20px 5px 20px 15px ;
-  background-image: url("./shiny_app/www/bitss_just_logo_transparent.png"), url("./shiny_app/www/cega_transparent.png");
+  background-image: url("./shiny_app/www/MAMD_fake_logo.png");
   background-size: contain;
-  background-position: left, right;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
